--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
       </p>
       <ul class="intro__list">
-        <li>Часовых поясов <span class="intro__list_weight_light">11</span></li>
-        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_weight_light">12</span>
+        <li>Часовых поясов <span class="intro__list_num">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_num">12</span>
         </li>
-        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_weight_light">16</span>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_num">16</span>
         </li>
-        <li>Природных заповедников <span class="intro__list_weight_light">105</span></li>
-        <li>Аэропортов <span class="intro__list_weight_light">241</span></li>
+        <li>Природных заповедников <span class="intro__list_num">105</span></li>
+        <li>Аэропортов <span class="intro__list_num">241</span></li>
       </ul>
     </section>
 
